Updated some icons to look more in line with the rest of the icon set. Fixed the arrow alignment for paginated tables. Fixed header link pointing to the default organization. Prepared the logo for enhaced version update.

--- a/branding/css/rhn-header.css
+++ b/branding/css/rhn-header.css
@@ -11,9 +11,11 @@ BEGIN new "rhel5" primary and secondary navigation
 /*IMG#rhLogo is hidden as it is not needed in SuSE Manager context*/
 IMG#rhLogo
 {
-	float: left;
-	margin-left: 15px;
+	/*[disabled]float:left;*/
+	/*[disabled]margin-left:15px;*/
 	display: none;
+	width: 0px;
+	height: 0px;
 }
 IMG#rhnLogo
 {
@@ -21,6 +23,7 @@ IMG#rhnLogo
 	width: 220px;
 	height: 70px;
 	margin-left: 10px;
+	position: absolute;
 }
 #utility
 {
@@ -66,6 +69,7 @@ IMG#rhnLogo
 	/*[disabled]background-position:bottom left;*/
 	/*[disabled]background-repeat:no-repeat;*/
 	display: block;
+	color: #C6DEAE;
 	/*[disabled]padding:6px 0px 8px;*/
 }
 #utilityAccount SPAN.label
@@ -73,6 +77,7 @@ IMG#rhnLogo
 	/*[disabled]text-transform:uppercase;*/
 	font-size: 0.8em;
 	font-weight: normal;
+	color: #000000;
 }
 #utilityAccount P A, #utilityAccount P A:link
 {
